# gazebo_segmentation

./: CMakeLists.txt  README.md  package.xml
include/gazebo_segmentation/: NewMOC.h  gazebo_segmentation.h
launch/: example.launch
models/segmentation_camera/: model.config  model.sdf
src/: NewMOC.cpp  gazebo_segmentation.cpp
test/: segmentation_test.cpp
worlds/: example.world
