<?xml version="1.0"?>
<package format="2">
  <name>gazebo_segmentation</name>
  <version>0.0.1</version>
  <description>Gazebo segmentation package</description>
  <author email="nwagner@lincoln.ac.uk">Nikolaus Wagner</author>
  <maintainer email="nwagner@lincoln.ac.uk">Nikolaus Wagner</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>gazebo_ros</depend>
  <depend>roscpp</depend>
  <depend>depth_image_proc</depend>
  <depend>image_transport</depend>
  <depend>camera_info_manager</depend>
  <depend>sensor_msgs</depend>

  <export>
    <gazebo_ros
      plugin_path="${prefix}/lib"
      gazebo_media_path="${prefix}"
      gazebo_model_path="${prefix}/models"
      />
  </export>
</package>
